# ansible-zfs

./: .ansible-lint  .gitignore  .yamllint  LICENSE  README.md  Vagrantfile  client.yml  playbook.yml  pyproject.toml  requirements-dev.txt  requirements.txt  requirements.yml
.github/: settings.yml
.github/workflows/: default.yml  release-galaxy.yml
defaults/: main.yml
files/: zfs-load-key.sh
handlers/: main.yml
meta/: main.yml
tasks/: debian.yml  encryption_keys.yml  main.yml  manage_zfs.yml  monitoring.yml  samba.yml  tune_zfs.yml  ubuntu.yml
templates/etc/samba/: smb.conf.j2
templates/etc/systemd/system/: zfs-load-key@.service.j2
