[tool.poetry]
name = "ansible-zfs"
version = "0.1.0"
description = ""
authors = ["Larry Smith Jr. <mrlesmithjr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ansible = "8.7.0"


[tool.poetry.group.dev.dependencies]
yamllint = "^1.37.1"
ansible-lint = { version = "^6.22.2", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
